# Starlight

./: .gitignore  CMakeLists.txt  README.md
examples/: Main.cpp
include/: Application.hpp  Camera.hpp  Device.hpp  FirstApp.hpp  GameObject.hpp  Input.hpp  KeyCodes.hpp  KeyboardMovementController.hpp  Model.hpp  Pipeline.hpp  Renderer.hpp  SimpleRenderSystem.hpp  Swapchain.hpp  Utils.hpp  Window.hpp
include/Core/: Asserts.hpp  Common.hpp  Logger.hpp
include/GaussianSplatting/: Ellipsoids.hpp  GSPointCloud.hpp  PlyLoader.hpp  PointCloud.hpp  SplatData.hpp
include/input/: Input.hpp  MouseButtonCodes.hpp
include/renderer/: Bindable.hpp  Drawable.hpp  FrameInfo.hpp  Model.hpp  Renderer.hpp
include/renderer/rendersystems/: GaussianSystem.hpp  PointLightSystem.hpp  SimpleRenderSystem.hpp
include/renderer/wrapper/: Buffer.hpp  CommandPool.hpp  Descriptors.hpp  Device.hpp  Image.hpp  Instance.hpp  PhysicalDevice.hpp  Pipeline.hpp  Shader.hpp  ShaderModule.hpp  Swapchain.hpp  Window.hpp
scripts/: linux_compile.sh
shaders/: Gaussian.frag  Gaussian.frag.spv  Gaussian.vert  Gaussian.vert.spv  PointLight.frag  PointLight.frag.spv  PointLight.vert  PointLight.vert.spv  SimpleShader.frag  SimpleShader.frag.spv  SimpleShader.vert  SimpleShader.vert.spv
src/: Application.cpp  Buffer.cpp  Camera.cpp  CommandPool.cpp  Common.cpp  Descriptors.cpp  Device.cpp  Ellipsoids.cpp  FirstApp.cpp  GSPointCloud.cpp  GameObject.cpp  GaussianSystem.cpp  Image.cpp  Input.cpp  Instance.cpp  KeyboardMovementController.cpp  Model.cpp  PhysicalDevice.cpp  Pipeline.cpp  PlyLoader.cpp  PointCloud.cpp  PointLightSystem.cpp  Renderer.cpp  Shader.cpp  ShaderModule.cpp  SimpleRenderSystem.cpp  Swapchain.cpp  Window.cpp
